parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> run
Rule 1     run -> program
Rule 2     program -> program function
Rule 3     program -> program function_call
Rule 4     program -> program python_function_call
Rule 5     program -> program variable
Rule 6     program -> program token
Rule 7     program -> function
Rule 8     program -> function_call
Rule 9     program -> python_function_call
Rule 10    program -> variable
Rule 11    program -> token
Rule 12    function -> FN id ( parameter ) { body }
Rule 13    function -> COMMAND id ( parameter ) { body }
Rule 14    token -> TOKEN ( string )
Rule 15    function_call -> id ( term_list )
Rule 16    python_function_call -> . id ( term_list )
Rule 17    parameter -> id , parameter
Rule 18    parameter -> id
Rule 19    parameter -> empty
Rule 20    body -> body exp
Rule 21    body -> body variable
Rule 22    body -> body return
Rule 23    body -> body global
Rule 24    body -> body function_call
Rule 25    body -> body python_function_call
Rule 26    body -> function_call
Rule 27    body -> python_function_call
Rule 28    body -> exp
Rule 29    body -> variable
Rule 30    body -> return
Rule 31    body -> global
Rule 32    exp -> term binop exp
Rule 33    exp -> term
Rule 34    exp -> IF exp { body } ELSE { body }
Rule 35    exp -> IF exp { body }
Rule 36    exp -> TRY { body } CATCH { body }
Rule 37    exp -> FOR id IN number . . number { body }
Rule 38    exp -> FOR id IN id { body }
Rule 39    variable -> id = exp
Rule 40    variable -> id = closure
Rule 41    closure -> | term_list | : body
Rule 42    return -> RET id
Rule 43    global -> GLOBAL term_list
Rule 44    term_map -> term : term , term_map
Rule 45    term_map -> term : term
Rule 46    term_list -> term_list , term
Rule 47    term_list -> term
Rule 48    term -> unop term
Rule 49    term -> number
Rule 50    term -> boolean
Rule 51    term -> string
Rule 52    term -> function_call
Rule 53    term -> python_function_call
Rule 54    term -> id
Rule 55    term -> list
Rule 56    term -> dict
Rule 57    term -> empty
Rule 58    unop -> SIGN
Rule 59    unop -> UNITARY_OPERATOR
Rule 60    binop -> SIGN
Rule 61    binop -> BINARY_OPERATOR
Rule 62    dict -> { term_map }
Rule 63    dict -> { empty }
Rule 64    list -> [ term_list ]
Rule 65    number -> FLOAT
Rule 66    number -> INTEGER
Rule 67    boolean -> BOOLEAN
Rule 68    string -> STRING
Rule 69    id -> ID
Rule 70    empty -> <empty>

Terminals, with rules where they appear

(                    : 12 13 14 15 16
)                    : 12 13 14 15 16
,                    : 17 44 46
.                    : 16 37 37
:                    : 41 44 45
=                    : 39 40
BINARY_OPERATOR      : 61
BOOLEAN              : 67
CATCH                : 36
COMMAND              : 13
ELSE                 : 34
FLOAT                : 65
FN                   : 12
FOR                  : 37 38
GLOBAL               : 43
ID                   : 69
IF                   : 34 35
IN                   : 37 38
INTEGER              : 66
RET                  : 42
SIGN                 : 58 60
STRING               : 68
TOKEN                : 14
TRY                  : 36
UNITARY_OPERATOR     : 59
[                    : 64
]                    : 64
error                : 
{                    : 12 13 34 34 35 36 36 37 38 62 63
|                    : 41 41
}                    : 12 13 34 34 35 36 36 37 38 62 63

Nonterminals, with rules where they appear

binop                : 32
body                 : 12 13 20 21 22 23 24 25 34 34 35 36 36 37 38 41
boolean              : 50
closure              : 40
dict                 : 56
empty                : 19 57 63
exp                  : 20 28 32 34 35 39
function             : 2 7
function_call        : 3 8 24 26 52
global               : 23 31
id                   : 12 13 15 16 17 18 37 38 38 39 40 42 54
list                 : 55
number               : 37 37 49
parameter            : 12 13 17
program              : 1 2 3 4 5 6
python_function_call : 4 9 25 27 53
return               : 22 30
run                  : 0
string               : 14 51
term                 : 32 33 44 44 45 45 46 47 48
term_list            : 15 16 41 43 46 64
term_map             : 44 62
token                : 6 11
unop                 : 48
variable             : 5 10 21 29

Parsing method: LALR

state 0

    (0) S' -> . run
    (1) run -> . program
    (2) program -> . program function
    (3) program -> . program function_call
    (4) program -> . program python_function_call
    (5) program -> . program variable
    (6) program -> . program token
    (7) program -> . function
    (8) program -> . function_call
    (9) program -> . python_function_call
    (10) program -> . variable
    (11) program -> . token
    (12) function -> . FN id ( parameter ) { body }
    (13) function -> . COMMAND id ( parameter ) { body }
    (15) function_call -> . id ( term_list )
    (16) python_function_call -> . . id ( term_list )
    (39) variable -> . id = exp
    (40) variable -> . id = closure
    (14) token -> . TOKEN ( string )
    (69) id -> . ID

    FN              shift and go to state 8
    COMMAND         shift and go to state 10
    .               shift and go to state 11
    TOKEN           shift and go to state 12
    ID              shift and go to state 13

    run                            shift and go to state 1
    program                        shift and go to state 2
    function                       shift and go to state 3
    function_call                  shift and go to state 4
    python_function_call           shift and go to state 5
    variable                       shift and go to state 6
    token                          shift and go to state 7
    id                             shift and go to state 9

state 1

    (0) S' -> run .



state 2

    (1) run -> program .
    (2) program -> program . function
    (3) program -> program . function_call
    (4) program -> program . python_function_call
    (5) program -> program . variable
    (6) program -> program . token
    (12) function -> . FN id ( parameter ) { body }
    (13) function -> . COMMAND id ( parameter ) { body }
    (15) function_call -> . id ( term_list )
    (16) python_function_call -> . . id ( term_list )
    (39) variable -> . id = exp
    (40) variable -> . id = closure
    (14) token -> . TOKEN ( string )
    (69) id -> . ID

    $end            reduce using rule 1 (run -> program .)
    FN              shift and go to state 8
    COMMAND         shift and go to state 10
    .               shift and go to state 11
    TOKEN           shift and go to state 12
    ID              shift and go to state 13

    function                       shift and go to state 14
    function_call                  shift and go to state 15
    python_function_call           shift and go to state 16
    variable                       shift and go to state 17
    token                          shift and go to state 18
    id                             shift and go to state 9

state 3

    (7) program -> function .

    FN              reduce using rule 7 (program -> function .)
    COMMAND         reduce using rule 7 (program -> function .)
    .               reduce using rule 7 (program -> function .)
    TOKEN           reduce using rule 7 (program -> function .)
    ID              reduce using rule 7 (program -> function .)
    $end            reduce using rule 7 (program -> function .)


state 4

    (8) program -> function_call .

    FN              reduce using rule 8 (program -> function_call .)
    COMMAND         reduce using rule 8 (program -> function_call .)
    .               reduce using rule 8 (program -> function_call .)
    TOKEN           reduce using rule 8 (program -> function_call .)
    ID              reduce using rule 8 (program -> function_call .)
    $end            reduce using rule 8 (program -> function_call .)


state 5

    (9) program -> python_function_call .

    FN              reduce using rule 9 (program -> python_function_call .)
    COMMAND         reduce using rule 9 (program -> python_function_call .)
    .               reduce using rule 9 (program -> python_function_call .)
    TOKEN           reduce using rule 9 (program -> python_function_call .)
    ID              reduce using rule 9 (program -> python_function_call .)
    $end            reduce using rule 9 (program -> python_function_call .)


state 6

    (10) program -> variable .

    FN              reduce using rule 10 (program -> variable .)
    COMMAND         reduce using rule 10 (program -> variable .)
    .               reduce using rule 10 (program -> variable .)
    TOKEN           reduce using rule 10 (program -> variable .)
    ID              reduce using rule 10 (program -> variable .)
    $end            reduce using rule 10 (program -> variable .)


state 7

    (11) program -> token .

    FN              reduce using rule 11 (program -> token .)
    COMMAND         reduce using rule 11 (program -> token .)
    .               reduce using rule 11 (program -> token .)
    TOKEN           reduce using rule 11 (program -> token .)
    ID              reduce using rule 11 (program -> token .)
    $end            reduce using rule 11 (program -> token .)


state 8

    (12) function -> FN . id ( parameter ) { body }
    (69) id -> . ID

    ID              shift and go to state 13

    id                             shift and go to state 19

state 9

    (15) function_call -> id . ( term_list )
    (39) variable -> id . = exp
    (40) variable -> id . = closure

    (               shift and go to state 20
    =               shift and go to state 21


state 10

    (13) function -> COMMAND . id ( parameter ) { body }
    (69) id -> . ID

    ID              shift and go to state 13

    id                             shift and go to state 22

state 11

    (16) python_function_call -> . . id ( term_list )
    (69) id -> . ID

    ID              shift and go to state 13

    id                             shift and go to state 23

state 12

    (14) token -> TOKEN . ( string )

    (               shift and go to state 24


state 13

    (69) id -> ID .

    (               reduce using rule 69 (id -> ID .)
    =               reduce using rule 69 (id -> ID .)
    )               reduce using rule 69 (id -> ID .)
    ,               reduce using rule 69 (id -> ID .)
    SIGN            reduce using rule 69 (id -> ID .)
    BINARY_OPERATOR reduce using rule 69 (id -> ID .)
    FN              reduce using rule 69 (id -> ID .)
    COMMAND         reduce using rule 69 (id -> ID .)
    .               reduce using rule 69 (id -> ID .)
    TOKEN           reduce using rule 69 (id -> ID .)
    ID              reduce using rule 69 (id -> ID .)
    $end            reduce using rule 69 (id -> ID .)
    }               reduce using rule 69 (id -> ID .)
    IF              reduce using rule 69 (id -> ID .)
    TRY             reduce using rule 69 (id -> ID .)
    FOR             reduce using rule 69 (id -> ID .)
    RET             reduce using rule 69 (id -> ID .)
    GLOBAL          reduce using rule 69 (id -> ID .)
    UNITARY_OPERATOR reduce using rule 69 (id -> ID .)
    FLOAT           reduce using rule 69 (id -> ID .)
    INTEGER         reduce using rule 69 (id -> ID .)
    BOOLEAN         reduce using rule 69 (id -> ID .)
    STRING          reduce using rule 69 (id -> ID .)
    [               reduce using rule 69 (id -> ID .)
    {               reduce using rule 69 (id -> ID .)
    ]               reduce using rule 69 (id -> ID .)
    :               reduce using rule 69 (id -> ID .)
    |               reduce using rule 69 (id -> ID .)
    IN              reduce using rule 69 (id -> ID .)


state 14

    (2) program -> program function .

    FN              reduce using rule 2 (program -> program function .)
    COMMAND         reduce using rule 2 (program -> program function .)
    .               reduce using rule 2 (program -> program function .)
    TOKEN           reduce using rule 2 (program -> program function .)
    ID              reduce using rule 2 (program -> program function .)
    $end            reduce using rule 2 (program -> program function .)


state 15

    (3) program -> program function_call .

    FN              reduce using rule 3 (program -> program function_call .)
    COMMAND         reduce using rule 3 (program -> program function_call .)
    .               reduce using rule 3 (program -> program function_call .)
    TOKEN           reduce using rule 3 (program -> program function_call .)
    ID              reduce using rule 3 (program -> program function_call .)
    $end            reduce using rule 3 (program -> program function_call .)


state 16

    (4) program -> program python_function_call .

    FN              reduce using rule 4 (program -> program python_function_call .)
    COMMAND         reduce using rule 4 (program -> program python_function_call .)
    .               reduce using rule 4 (program -> program python_function_call .)
    TOKEN           reduce using rule 4 (program -> program python_function_call .)
    ID              reduce using rule 4 (program -> program python_function_call .)
    $end            reduce using rule 4 (program -> program python_function_call .)


state 17

    (5) program -> program variable .

    FN              reduce using rule 5 (program -> program variable .)
    COMMAND         reduce using rule 5 (program -> program variable .)
    .               reduce using rule 5 (program -> program variable .)
    TOKEN           reduce using rule 5 (program -> program variable .)
    ID              reduce using rule 5 (program -> program variable .)
    $end            reduce using rule 5 (program -> program variable .)


state 18

    (6) program -> program token .

    FN              reduce using rule 6 (program -> program token .)
    COMMAND         reduce using rule 6 (program -> program token .)
    .               reduce using rule 6 (program -> program token .)
    TOKEN           reduce using rule 6 (program -> program token .)
    ID              reduce using rule 6 (program -> program token .)
    $end            reduce using rule 6 (program -> program token .)


state 19

    (12) function -> FN id . ( parameter ) { body }

    (               shift and go to state 25


state 20

    (15) function_call -> id ( . term_list )
    (46) term_list -> . term_list , term
    (47) term_list -> . term
    (48) term -> . unop term
    (49) term -> . number
    (50) term -> . boolean
    (51) term -> . string
    (52) term -> . function_call
    (53) term -> . python_function_call
    (54) term -> . id
    (55) term -> . list
    (56) term -> . dict
    (57) term -> . empty
    (58) unop -> . SIGN
    (59) unop -> . UNITARY_OPERATOR
    (65) number -> . FLOAT
    (66) number -> . INTEGER
    (67) boolean -> . BOOLEAN
    (68) string -> . STRING
    (15) function_call -> . id ( term_list )
    (16) python_function_call -> . . id ( term_list )
    (69) id -> . ID
    (64) list -> . [ term_list ]
    (62) dict -> . { term_map }
    (63) dict -> . { empty }
    (70) empty -> .

    SIGN            shift and go to state 38
    UNITARY_OPERATOR shift and go to state 39
    FLOAT           shift and go to state 40
    INTEGER         shift and go to state 41
    BOOLEAN         shift and go to state 42
    STRING          shift and go to state 43
    .               shift and go to state 11
    ID              shift and go to state 13
    [               shift and go to state 44
    {               shift and go to state 45
    )               reduce using rule 70 (empty -> .)
    ,               reduce using rule 70 (empty -> .)

    id                             shift and go to state 26
    term_list                      shift and go to state 27
    term                           shift and go to state 28
    unop                           shift and go to state 29
    number                         shift and go to state 30
    boolean                        shift and go to state 31
    string                         shift and go to state 32
    function_call                  shift and go to state 33
    python_function_call           shift and go to state 34
    list                           shift and go to state 35
    dict                           shift and go to state 36
    empty                          shift and go to state 37

state 21

    (39) variable -> id = . exp
    (40) variable -> id = . closure
    (32) exp -> . term binop exp
    (33) exp -> . term
    (34) exp -> . IF exp { body } ELSE { body }
    (35) exp -> . IF exp { body }
    (36) exp -> . TRY { body } CATCH { body }
    (37) exp -> . FOR id IN number . . number { body }
    (38) exp -> . FOR id IN id { body }
    (41) closure -> . | term_list | : body
    (48) term -> . unop term
    (49) term -> . number
    (50) term -> . boolean
    (51) term -> . string
    (52) term -> . function_call
    (53) term -> . python_function_call
    (54) term -> . id
    (55) term -> . list
    (56) term -> . dict
    (57) term -> . empty
    (58) unop -> . SIGN
    (59) unop -> . UNITARY_OPERATOR
    (65) number -> . FLOAT
    (66) number -> . INTEGER
    (67) boolean -> . BOOLEAN
    (68) string -> . STRING
    (15) function_call -> . id ( term_list )
    (16) python_function_call -> . . id ( term_list )
    (69) id -> . ID
    (64) list -> . [ term_list ]
    (62) dict -> . { term_map }
    (63) dict -> . { empty }
    (70) empty -> .

  ! shift/reduce conflict for SIGN resolved as shift
  ! shift/reduce conflict for . resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for TRY resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for UNITARY_OPERATOR resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for INTEGER resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for [ resolved as shift
  ! shift/reduce conflict for { resolved as shift
    IF              shift and go to state 49
    TRY             shift and go to state 50
    FOR             shift and go to state 51
    |               shift and go to state 52
    SIGN            shift and go to state 38
    UNITARY_OPERATOR shift and go to state 39
    FLOAT           shift and go to state 40
    INTEGER         shift and go to state 41
    BOOLEAN         shift and go to state 42
    STRING          shift and go to state 43
    .               shift and go to state 11
    ID              shift and go to state 13
    [               shift and go to state 44
    {               shift and go to state 45
    BINARY_OPERATOR reduce using rule 70 (empty -> .)
    FN              reduce using rule 70 (empty -> .)
    COMMAND         reduce using rule 70 (empty -> .)
    TOKEN           reduce using rule 70 (empty -> .)
    $end            reduce using rule 70 (empty -> .)
    }               reduce using rule 70 (empty -> .)
    RET             reduce using rule 70 (empty -> .)
    GLOBAL          reduce using rule 70 (empty -> .)

  ! SIGN            [ reduce using rule 70 (empty -> .) ]
  ! .               [ reduce using rule 70 (empty -> .) ]
  ! ID              [ reduce using rule 70 (empty -> .) ]
  ! IF              [ reduce using rule 70 (empty -> .) ]
  ! TRY             [ reduce using rule 70 (empty -> .) ]
  ! FOR             [ reduce using rule 70 (empty -> .) ]
  ! UNITARY_OPERATOR [ reduce using rule 70 (empty -> .) ]
  ! FLOAT           [ reduce using rule 70 (empty -> .) ]
  ! INTEGER         [ reduce using rule 70 (empty -> .) ]
  ! BOOLEAN         [ reduce using rule 70 (empty -> .) ]
  ! STRING          [ reduce using rule 70 (empty -> .) ]
  ! [               [ reduce using rule 70 (empty -> .) ]
  ! {               [ reduce using rule 70 (empty -> .) ]

    id                             shift and go to state 26
    exp                            shift and go to state 46
    closure                        shift and go to state 47
    term                           shift and go to state 48
    number                         shift and go to state 30
    unop                           shift and go to state 29
    boolean                        shift and go to state 31
    string                         shift and go to state 32
    function_call                  shift and go to state 33
    python_function_call           shift and go to state 34
    list                           shift and go to state 35
    dict                           shift and go to state 36
    empty                          shift and go to state 37

state 22

    (13) function -> COMMAND id . ( parameter ) { body }

    (               shift and go to state 53


state 23

    (16) python_function_call -> . id . ( term_list )

    (               shift and go to state 54


state 24

    (14) token -> TOKEN ( . string )
    (68) string -> . STRING

    STRING          shift and go to state 43

    string                         shift and go to state 55

state 25

    (12) function -> FN id ( . parameter ) { body }
    (17) parameter -> . id , parameter
    (18) parameter -> . id
    (19) parameter -> . empty
    (69) id -> . ID
    (70) empty -> .

    ID              shift and go to state 13
    )               reduce using rule 70 (empty -> .)

    id                             shift and go to state 56
    parameter                      shift and go to state 57
    empty                          shift and go to state 58

state 26

    (54) term -> id .
    (15) function_call -> id . ( term_list )

    )               reduce using rule 54 (term -> id .)
    ,               reduce using rule 54 (term -> id .)
    SIGN            reduce using rule 54 (term -> id .)
    BINARY_OPERATOR reduce using rule 54 (term -> id .)
    FN              reduce using rule 54 (term -> id .)
    COMMAND         reduce using rule 54 (term -> id .)
    .               reduce using rule 54 (term -> id .)
    TOKEN           reduce using rule 54 (term -> id .)
    ID              reduce using rule 54 (term -> id .)
    $end            reduce using rule 54 (term -> id .)
    }               reduce using rule 54 (term -> id .)
    IF              reduce using rule 54 (term -> id .)
    TRY             reduce using rule 54 (term -> id .)
    FOR             reduce using rule 54 (term -> id .)
    RET             reduce using rule 54 (term -> id .)
    GLOBAL          reduce using rule 54 (term -> id .)
    UNITARY_OPERATOR reduce using rule 54 (term -> id .)
    FLOAT           reduce using rule 54 (term -> id .)
    INTEGER         reduce using rule 54 (term -> id .)
    BOOLEAN         reduce using rule 54 (term -> id .)
    STRING          reduce using rule 54 (term -> id .)
    [               reduce using rule 54 (term -> id .)
    {               reduce using rule 54 (term -> id .)
    ]               reduce using rule 54 (term -> id .)
    :               reduce using rule 54 (term -> id .)
    |               reduce using rule 54 (term -> id .)
    (               shift and go to state 20


state 27

    (15) function_call -> id ( term_list . )
    (46) term_list -> term_list . , term

    )               shift and go to state 59
    ,               shift and go to state 60


state 28

    (47) term_list -> term .

    )               reduce using rule 47 (term_list -> term .)
    ,               reduce using rule 47 (term_list -> term .)
    ]               reduce using rule 47 (term_list -> term .)
    |               reduce using rule 47 (term_list -> term .)
    }               reduce using rule 47 (term_list -> term .)
    IF              reduce using rule 47 (term_list -> term .)
    TRY             reduce using rule 47 (term_list -> term .)
    FOR             reduce using rule 47 (term_list -> term .)
    RET             reduce using rule 47 (term_list -> term .)
    GLOBAL          reduce using rule 47 (term_list -> term .)
    .               reduce using rule 47 (term_list -> term .)
    ID              reduce using rule 47 (term_list -> term .)
    SIGN            reduce using rule 47 (term_list -> term .)
    UNITARY_OPERATOR reduce using rule 47 (term_list -> term .)
    FLOAT           reduce using rule 47 (term_list -> term .)
    INTEGER         reduce using rule 47 (term_list -> term .)
    BOOLEAN         reduce using rule 47 (term_list -> term .)
    STRING          reduce using rule 47 (term_list -> term .)
    [               reduce using rule 47 (term_list -> term .)
    {               reduce using rule 47 (term_list -> term .)
    BINARY_OPERATOR reduce using rule 47 (term_list -> term .)
    FN              reduce using rule 47 (term_list -> term .)
    COMMAND         reduce using rule 47 (term_list -> term .)
    TOKEN           reduce using rule 47 (term_list -> term .)
    $end            reduce using rule 47 (term_list -> term .)


state 29

    (48) term -> unop . term
    (48) term -> . unop term
    (49) term -> . number
    (50) term -> . boolean
    (51) term -> . string
    (52) term -> . function_call
    (53) term -> . python_function_call
    (54) term -> . id
    (55) term -> . list
    (56) term -> . dict
    (57) term -> . empty
    (58) unop -> . SIGN
    (59) unop -> . UNITARY_OPERATOR
    (65) number -> . FLOAT
    (66) number -> . INTEGER
    (67) boolean -> . BOOLEAN
    (68) string -> . STRING
    (15) function_call -> . id ( term_list )
    (16) python_function_call -> . . id ( term_list )
    (69) id -> . ID
    (64) list -> . [ term_list ]
    (62) dict -> . { term_map }
    (63) dict -> . { empty }
    (70) empty -> .

  ! shift/reduce conflict for SIGN resolved as shift
  ! shift/reduce conflict for . resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for UNITARY_OPERATOR resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for INTEGER resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for [ resolved as shift
  ! shift/reduce conflict for { resolved as shift
    SIGN            shift and go to state 38
    UNITARY_OPERATOR shift and go to state 39
    FLOAT           shift and go to state 40
    INTEGER         shift and go to state 41
    BOOLEAN         shift and go to state 42
    STRING          shift and go to state 43
    .               shift and go to state 11
    ID              shift and go to state 13
    [               shift and go to state 44
    {               shift and go to state 45
    )               reduce using rule 70 (empty -> .)
    ,               reduce using rule 70 (empty -> .)
    BINARY_OPERATOR reduce using rule 70 (empty -> .)
    FN              reduce using rule 70 (empty -> .)
    COMMAND         reduce using rule 70 (empty -> .)
    TOKEN           reduce using rule 70 (empty -> .)
    $end            reduce using rule 70 (empty -> .)
    }               reduce using rule 70 (empty -> .)
    IF              reduce using rule 70 (empty -> .)
    TRY             reduce using rule 70 (empty -> .)
    FOR             reduce using rule 70 (empty -> .)
    RET             reduce using rule 70 (empty -> .)
    GLOBAL          reduce using rule 70 (empty -> .)
    ]               reduce using rule 70 (empty -> .)
    :               reduce using rule 70 (empty -> .)
    |               reduce using rule 70 (empty -> .)

  ! SIGN            [ reduce using rule 70 (empty -> .) ]
  ! .               [ reduce using rule 70 (empty -> .) ]
  ! ID              [ reduce using rule 70 (empty -> .) ]
  ! UNITARY_OPERATOR [ reduce using rule 70 (empty -> .) ]
  ! FLOAT           [ reduce using rule 70 (empty -> .) ]
  ! INTEGER         [ reduce using rule 70 (empty -> .) ]
  ! BOOLEAN         [ reduce using rule 70 (empty -> .) ]
  ! STRING          [ reduce using rule 70 (empty -> .) ]
  ! [               [ reduce using rule 70 (empty -> .) ]
  ! {               [ reduce using rule 70 (empty -> .) ]

    unop                           shift and go to state 29
    term                           shift and go to state 61
    number                         shift and go to state 30
    boolean                        shift and go to state 31
    string                         shift and go to state 32
    function_call                  shift and go to state 33
    python_function_call           shift and go to state 34
    id                             shift and go to state 26
    list                           shift and go to state 35
    dict                           shift and go to state 36
    empty                          shift and go to state 37

state 30

    (49) term -> number .

    )               reduce using rule 49 (term -> number .)
    ,               reduce using rule 49 (term -> number .)
    SIGN            reduce using rule 49 (term -> number .)
    BINARY_OPERATOR reduce using rule 49 (term -> number .)
    FN              reduce using rule 49 (term -> number .)
    COMMAND         reduce using rule 49 (term -> number .)
    .               reduce using rule 49 (term -> number .)
    TOKEN           reduce using rule 49 (term -> number .)
    ID              reduce using rule 49 (term -> number .)
    $end            reduce using rule 49 (term -> number .)
    }               reduce using rule 49 (term -> number .)
    IF              reduce using rule 49 (term -> number .)
    TRY             reduce using rule 49 (term -> number .)
    FOR             reduce using rule 49 (term -> number .)
    RET             reduce using rule 49 (term -> number .)
    GLOBAL          reduce using rule 49 (term -> number .)
    UNITARY_OPERATOR reduce using rule 49 (term -> number .)
    FLOAT           reduce using rule 49 (term -> number .)
    INTEGER         reduce using rule 49 (term -> number .)
    BOOLEAN         reduce using rule 49 (term -> number .)
    STRING          reduce using rule 49 (term -> number .)
    [               reduce using rule 49 (term -> number .)
    {               reduce using rule 49 (term -> number .)
    ]               reduce using rule 49 (term -> number .)
    :               reduce using rule 49 (term -> number .)
    |               reduce using rule 49 (term -> number .)


state 31

    (50) term -> boolean .

    )               reduce using rule 50 (term -> boolean .)
    ,               reduce using rule 50 (term -> boolean .)
    SIGN            reduce using rule 50 (term -> boolean .)
    BINARY_OPERATOR reduce using rule 50 (term -> boolean .)
    FN              reduce using rule 50 (term -> boolean .)
    COMMAND         reduce using rule 50 (term -> boolean .)
    .               reduce using rule 50 (term -> boolean .)
    TOKEN           reduce using rule 50 (term -> boolean .)
    ID              reduce using rule 50 (term -> boolean .)
    $end            reduce using rule 50 (term -> boolean .)
    }               reduce using rule 50 (term -> boolean .)
    IF              reduce using rule 50 (term -> boolean .)
    TRY             reduce using rule 50 (term -> boolean .)
    FOR             reduce using rule 50 (term -> boolean .)
    RET             reduce using rule 50 (term -> boolean .)
    GLOBAL          reduce using rule 50 (term -> boolean .)
    UNITARY_OPERATOR reduce using rule 50 (term -> boolean .)
    FLOAT           reduce using rule 50 (term -> boolean .)
    INTEGER         reduce using rule 50 (term -> boolean .)
    BOOLEAN         reduce using rule 50 (term -> boolean .)
    STRING          reduce using rule 50 (term -> boolean .)
    [               reduce using rule 50 (term -> boolean .)
    {               reduce using rule 50 (term -> boolean .)
    ]               reduce using rule 50 (term -> boolean .)
    :               reduce using rule 50 (term -> boolean .)
    |               reduce using rule 50 (term -> boolean .)


state 32

    (51) term -> string .

    )               reduce using rule 51 (term -> string .)
    ,               reduce using rule 51 (term -> string .)
    SIGN            reduce using rule 51 (term -> string .)
    BINARY_OPERATOR reduce using rule 51 (term -> string .)
    FN              reduce using rule 51 (term -> string .)
    COMMAND         reduce using rule 51 (term -> string .)
    .               reduce using rule 51 (term -> string .)
    TOKEN           reduce using rule 51 (term -> string .)
    ID              reduce using rule 51 (term -> string .)
    $end            reduce using rule 51 (term -> string .)
    }               reduce using rule 51 (term -> string .)
    IF              reduce using rule 51 (term -> string .)
    TRY             reduce using rule 51 (term -> string .)
    FOR             reduce using rule 51 (term -> string .)
    RET             reduce using rule 51 (term -> string .)
    GLOBAL          reduce using rule 51 (term -> string .)
    UNITARY_OPERATOR reduce using rule 51 (term -> string .)
    FLOAT           reduce using rule 51 (term -> string .)
    INTEGER         reduce using rule 51 (term -> string .)
    BOOLEAN         reduce using rule 51 (term -> string .)
    STRING          reduce using rule 51 (term -> string .)
    [               reduce using rule 51 (term -> string .)
    {               reduce using rule 51 (term -> string .)
    ]               reduce using rule 51 (term -> string .)
    :               reduce using rule 51 (term -> string .)
    |               reduce using rule 51 (term -> string .)


state 33

    (52) term -> function_call .

    )               reduce using rule 52 (term -> function_call .)
    ,               reduce using rule 52 (term -> function_call .)
    SIGN            reduce using rule 52 (term -> function_call .)
    BINARY_OPERATOR reduce using rule 52 (term -> function_call .)
    FN              reduce using rule 52 (term -> function_call .)
    COMMAND         reduce using rule 52 (term -> function_call .)
    .               reduce using rule 52 (term -> function_call .)
    TOKEN           reduce using rule 52 (term -> function_call .)
    ID              reduce using rule 52 (term -> function_call .)
    $end            reduce using rule 52 (term -> function_call .)
    }               reduce using rule 52 (term -> function_call .)
    IF              reduce using rule 52 (term -> function_call .)
    TRY             reduce using rule 52 (term -> function_call .)
    FOR             reduce using rule 52 (term -> function_call .)
    RET             reduce using rule 52 (term -> function_call .)
    GLOBAL          reduce using rule 52 (term -> function_call .)
    UNITARY_OPERATOR reduce using rule 52 (term -> function_call .)
    FLOAT           reduce using rule 52 (term -> function_call .)
    INTEGER         reduce using rule 52 (term -> function_call .)
    BOOLEAN         reduce using rule 52 (term -> function_call .)
    STRING          reduce using rule 52 (term -> function_call .)
    [               reduce using rule 52 (term -> function_call .)
    {               reduce using rule 52 (term -> function_call .)
    ]               reduce using rule 52 (term -> function_call .)
    :               reduce using rule 52 (term -> function_call .)
    |               reduce using rule 52 (term -> function_call .)


state 34

    (53) term -> python_function_call .

    )               reduce using rule 53 (term -> python_function_call .)
    ,               reduce using rule 53 (term -> python_function_call .)
    SIGN            reduce using rule 53 (term -> python_function_call .)
    BINARY_OPERATOR reduce using rule 53 (term -> python_function_call .)
    FN              reduce using rule 53 (term -> python_function_call .)
    COMMAND         reduce using rule 53 (term -> python_function_call .)
    .               reduce using rule 53 (term -> python_function_call .)
    TOKEN           reduce using rule 53 (term -> python_function_call .)
    ID              reduce using rule 53 (term -> python_function_call .)
    $end            reduce using rule 53 (term -> python_function_call .)
    }               reduce using rule 53 (term -> python_function_call .)
    IF              reduce using rule 53 (term -> python_function_call .)
    TRY             reduce using rule 53 (term -> python_function_call .)
    FOR             reduce using rule 53 (term -> python_function_call .)
    RET             reduce using rule 53 (term -> python_function_call .)
    GLOBAL          reduce using rule 53 (term -> python_function_call .)
    UNITARY_OPERATOR reduce using rule 53 (term -> python_function_call .)
    FLOAT           reduce using rule 53 (term -> python_function_call .)
    INTEGER         reduce using rule 53 (term -> python_function_call .)
    BOOLEAN         reduce using rule 53 (term -> python_function_call .)
    STRING          reduce using rule 53 (term -> python_function_call .)
    [               reduce using rule 53 (term -> python_function_call .)
    {               reduce using rule 53 (term -> python_function_call .)
    ]               reduce using rule 53 (term -> python_function_call .)
    :               reduce using rule 53 (term -> python_function_call .)
    |               reduce using rule 53 (term -> python_function_call .)


state 35

    (55) term -> list .
